— Add Button Type Checking to ensure that CCheckbox class can customize it

--- a/CCheckbox/Base.lproj/Main.storyboard
+++ b/CCheckbox/Base.lproj/Main.storyboard
@@ -70,11 +70,8 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CtV-6P-Juk">
                                 <rect key="frame" x="16" y="244" width="343" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86s-eL-uMR" customClass="CCheckbox" customModule="CCheckbox" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="86s-eL-uMR" customClass="CCheckbox" customModule="CCheckbox" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="25" height="50"/>
-                                        <state key="normal" title="Rww" image="ic_checkbox_empty">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="image" keyPath="normalImage" value="ic_ok"/>
                                             <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="ic_ok_selected"/>
